2012-09-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3559997.c:
	  Fixed bug #3559997.

2012-09-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (checkSClass),
	* src/SDCCast.c (expandInlineFuncs): fixed bug #3564755

2012-09-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (cheapestVal): fixed bug #3563977
	* support/regression/tests/enum.c: tests added for bug #3563977

2012-09-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (operandOperation): fixed bug #3537139

2012-09-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkelf.c,
	* src/hc08/gen.c: Fixed bug #3536431

2012-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  More verbose lospre debug output.
	* support/regression/tests/bug3564104.c:
	  Regression test for #3564104.

2012-08-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Fix for handling of parameters in the z80-related ports.

2012-08-27 Borut Razem <borut.razem AT gmail.com>

	* src/ds390/gen.c:
	  fixed muldiv regression test failures on ARM architecture

2012-08-25 Borut Razem <borut.razem AT gmail.com>

	* src/mcs51/gen.c:
	  fixed muldiv regression test failures on ARM architecture

2012-08-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3561215.c:
	  Fixed bug #3561215.

2012-08-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c: Reinserted break in proper context

2012-08-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/mcs51/gen.c:
	  Remove out-of-context break.

2012-08-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (aopPtrForSym): added warning for memory space overflow,
	  see bug 3509704